--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,10 @@ name = "pypi"
 
 [packages]
 langchain = "*"
+langchain-openai = "*"
+langchain-community = "*"
+langchainhub = "*"
+langchain-ollama = "*"
 
 [dev-packages]
 
